Rename site branding to La Bonne Seed

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grainothèque • Petites annonces de collection</title>
+    <title>La Bonne Seed • Petites annonces de collection</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header class="topbar">
       <div class="container nav">
-        <a class="brand" href="#">Grainothèque</a>
+        <a class="brand" href="#">La Bonne Seed</a>
         <nav>
           <a href="#listings">Annonces</a>
           <a href="#publish">Déposer une annonce</a>
@@ -140,7 +140,7 @@
 
     <footer>
       <div class="container footer">
-        <p>© 2026 Grainothèque — Marketplace de collection.</p>
+        <p>© 2026 La Bonne Seed — Marketplace de collection.</p>
         <a href="#">CGU</a>
       </div>
     </footer>
