--- a/poster-annonce.html
+++ b/poster-annonce.html
@@ -53,6 +53,13 @@
             </select>
           </label>
           <label>
+            Type d'annonce
+            <select id="deal-type-input" required>
+              <option value="Vente">Vente</option>
+              <option value="Echange">Échange</option>
+            </select>
+          </label>
+          <label>
             Vendeur
             <input id="seller-input" type="text" maxlength="50" required />
           </label>
