--- a/annonces.html
+++ b/annonces.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Header global -->
     <header class="site-header">
       <div class="container header-inner">
         <a href="index.html" class="logo">La Bonne Seed</a>
@@ -23,15 +22,14 @@
     </header>
 
     <main class="container">
-      <!-- Outils de recherche / filtrage / tri -->
+      <!-- Prompt #1 : section de cartes avec filtres -->
       <section>
-        <h1>Liste d’annonces</h1>
+        <h1>Annonces disponibles</h1>
         <form id="listing-filter-form" class="filters" autocomplete="off">
           <label>
             Recherche
-            <input id="search-input" type="search" placeholder="Nom, description, vendeur..." />
+            <input id="search-input" type="search" placeholder="Rechercher une annonce..." />
           </label>
-
           <label>
             Catégorie
             <select id="category-filter">
@@ -42,48 +40,33 @@
               <option value="Packs">Packs</option>
             </select>
           </label>
-
-          <label>
-            Type
-            <select id="listing-type-filter">
-              <option value="">Tous</option>
-              <option value="Vente">Vente</option>
-              <option value="Echange">Échange</option>
-            </select>
-          </label>
-
           <label>
             Prix min (€)
             <input id="min-price-filter" type="number" min="0" placeholder="0" />
           </label>
-
           <label>
             Prix max (€)
             <input id="max-price-filter" type="number" min="0" placeholder="100" />
           </label>
-
           <label>
-            Trier par
+            Trier
             <select id="sort-filter">
               <option value="recent">Plus récentes</option>
               <option value="price-asc">Prix croissant</option>
               <option value="price-desc">Prix décroissant</option>
             </select>
           </label>
-
           <button type="button" id="clear-filters">Réinitialiser</button>
         </form>
       </section>
 
-      <!-- Grille dynamique d'annonces -->
       <section>
         <p id="results-count" class="muted"></p>
         <div id="ads-grid" class="ads-grid"></div>
-        <p id="empty-message" class="empty-message" hidden>Aucune annonce trouvée avec ces critères.</p>
+        <p id="empty-message" class="empty-message" hidden>Aucune annonce ne correspond aux filtres.</p>
       </section>
     </main>
 
-    <!-- Footer global -->
     <footer class="site-footer">
       <div class="container footer-inner">
         <p><strong>La Bonne Seed</strong> — Achetez, vendez, échangez entre growers</p>
