--- a/detail-annonce.html
+++ b/detail-annonce.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Header global -->
     <header class="site-header">
       <div class="container header-inner">
         <a href="index.html" class="logo">La Bonne Seed</a>
@@ -23,12 +22,12 @@
     </header>
 
     <main class="container">
-      <!-- Détail d'une annonce chargée dynamiquement -->
+      <!-- Prompt #2 : détail annonce + retour liste -->
+      <p><a class="card-link" href="annonces.html">← Retour à la liste</a></p>
       <section id="detail-wrapper" class="detail-layout"></section>
       <p id="detail-empty" class="empty-message" hidden>Annonce introuvable.</p>
     </main>
 
-    <!-- Footer global -->
     <footer class="site-footer">
       <div class="container footer-inner">
         <p><strong>La Bonne Seed</strong> — Achetez, vendez, échangez entre growers</p>
