Complete ad detail page fields and add return-to-list link

--- a/detail-annonce.html
+++ b/detail-annonce.html
@@ -23,7 +23,7 @@
 
     <main class="container">
       <!-- Prompt #2 : détail annonce + retour liste -->
-      <p><a class="card-link" href="annonces.html">← Retour à la liste</a></p>
+      <p><a class="card-link" href="annonces.html">← Retour aux annonces</a></p>
       <section id="detail-wrapper" class="detail-layout"></section>
       <p id="detail-empty" class="empty-message" hidden>Annonce introuvable.</p>
     </main>
