Add real-time search by title or category for ad cards

--- a/annonces.html
+++ b/annonces.html
@@ -28,7 +28,7 @@
         <form id="listing-filter-form" class="filters" autocomplete="off">
           <label>
             Recherche
-            <input id="search-input" type="search" placeholder="Rechercher une annonce..." />
+            <input id="search-input" type="search" placeholder="Rechercher par titre ou catégorie..." />
           </label>
           <label>
             Catégorie
