Prepare GitHub deployment config and SQL query guide

--- a/poster-annonce.html
+++ b/poster-annonce.html
@@ -6,6 +6,7 @@
     <title>La Bonne Seed | Poster annonce</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <script src="config.js"></script>
   </head>
   <body>
     <header class="site-header">
