--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>La Bonne Seed | Marketplace</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-    <script src="https://www.paypal.com/sdk/js?client-id=YOUR_PAYPAL_CLIENT_ID&currency=EUR"></script>
+    <script src="config.js"></script>
   </head>
   <body>
     <header class="site-header">
